--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,8 @@
               "projects/user/src/assets"
             ],
             "styles": [
-              "projects/user/src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/user/src/styles.css"
             ],
             "scripts": []
           },
@@ -88,6 +88,7 @@
               "projects/user/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/user/src/styles.css"
             ],
             "scripts": []
@@ -117,6 +118,7 @@
               "projects/cockers/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/cockers/src/styles.css"
             ],
             "scripts": []
@@ -179,6 +181,7 @@
               "projects/cockers/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/cockers/src/styles.css"
             ],
             "scripts": []
@@ -208,6 +211,7 @@
               "projects/admin/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/admin/src/styles.css"
             ],
             "scripts": []
@@ -270,6 +274,7 @@
               "projects/admin/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/admin/src/styles.css"
             ],
             "scripts": []
@@ -299,6 +304,7 @@
               "projects/owner/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/owner/src/styles.css"
             ],
             "scripts": []
@@ -361,6 +367,7 @@
               "projects/owner/src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "projects/owner/src/styles.css"
             ],
             "scripts": []
